[package]
name = "furaibo-rs"
version = "0.1.0"
authors = ["Jackson Ming Hu <huming2207@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/app.rs"
crate-type = ["cdylib"]

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
codegen-units = 1
lto = true
#debug = true